# agent-manifest

./: .gitignore  404.html  ADOPTERS.md  ANTITRUST.md  CHANGELOG.md  CHARTER.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LIMITATIONS.md  MAINTAINERS.md  NOTICE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  requirements-docs.txt  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  spec_change.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  require-maintainer-approval.yml  sbom.yml  scorecard.yml
adr/: index.html
adr/0000-template/: index.html
adr/0001-rfc8785-canonical-json/: index.html
adr/0002-ed25519-standard-profile/: index.html
adr/0003-rfc9162-merkle-domain-separation/: index.html
adr/0004-pydantic-v2-schema-modeling/: index.html
adr/0005-ml-dsa-hybrid-signature/: index.html
adr/0005-ml-dsa-hybrid-signatures/: index.html
adr/0006-hitl-approval-mechanism/: index.html
adr/0007-revocation-crl-format/: index.html
adr/0007-revocation-json-lines-crl/: index.html
adr/0008-conformance-level-design/: index.html
adr/0008-conformance-levels/: index.html
adr/0009-spiffe-uri-agent-identity/: index.html
adr/0009-spiffe-uri-for-agent-identity/: index.html
adr/0010-runtime-attestation-freshness-proofs/: index.html
api-reference/: index.html  index.md
api-reference/attestation/: index.html
api-reference/cli/: index.html
api-reference/delegation/: index.html
api-reference/models/: index.html
api-reference/revocation/: index.html
api-reference/signing/: index.html
api-reference/verification/: index.html
changelog/: index.html
compliance/: index.html  index.md
compliance/dora/: index.html
compliance/eu-ai-act/: index.html
compliance/gdpr/: index.html
compliance/hipaa/: index.html
contributing/: index.html
docs/: CNAME  getting-started.md  governance.md  index.md  limitations.md  memory-governance.md  robots.txt  spec-overview.md
docs/adr/: 0000-template.md  0001-rfc8785-canonical-json.md  0002-ed25519-standard-profile.md  0003-rfc9162-merkle-domain-separation.md  0004-pydantic-v2-schema-modeling.md  0005-ml-dsa-hybrid-signature.md  0005-ml-dsa-hybrid-signatures.md  0006-hitl-approval-mechanism.md  0007-revocation-crl-format.md  0007-revocation-json-lines-crl.md  0008-conformance-level-design.md  0008-conformance-levels.md  0009-spiffe-uri-agent-identity.md  0009-spiffe-uri-for-agent-identity.md  0010-runtime-attestation-freshness-proofs.md  index.md
docs/api-reference/: attestation.md  cli.md  delegation.md  index.md  models.md  revocation.md  signing.md  verification.md
docs/compliance/: dora.md  eu-ai-act.md  gdpr.md  hipaa.md  index.md
docs/integrations/: agt.md  autogen-crewai.md  index.md  langchain.md  openai-agents.md
docs/operations/: audit-log.md  index.md  key-rotation.md  monitoring.md
docs/stylesheets/: extra.css
docs/tutorials/: ci-cd-signing.md  cmcp-session-binding.md  delegation-chains.md  deploy-verifier.md  deploying-the-verification-endpoint.md  hardware-attestation.md  hitl-approval-workflows.md  hitl-approvals.md  index.md  revocation-and-key-rotation.md  revocation.md  server-side-verification.md  your-first-manifest.md
examples/: README.md  docker-compose-verifier.yml  level0-software-only.json  level1-tpm-attested.json
examples/delegation-chain/: README.md  delegate-manifest.json  root-manifest.json  sub-delegate-manifest.json  verify.sh
examples/hitl/: README.md  manifest-with-hitl.json  verify.sh
examples/multi-artifact/: README.md  manifest.json  verify.sh
examples/revocation/: README.md  crl.jsonl  demo.sh  revocation-record.json  valid-manifest.json
getting-started/: index.html  index.md
governance/: index.html  manifest-enforcement.yaml
integrations/: index.html
integrations/agt/: index.html
integrations/autogen-crewai/: index.html
integrations/langchain/: index.html
integrations/openai-agents/: index.html
limitations/: index.html
memory-governance/: index.html
operations/: index.html
operations/audit-log/: index.html
operations/key-rotation/: index.html
operations/monitoring/: index.html
overrides/: main.html
python/: README.md  pyproject.toml
python/src/agent_manifest/: __init__.py  _attestation.py  _auto_provider.py  _canonicalize.py  _cert_chain.py  _delegation.py  _hw_providers.py  _memory_delta.py  _merkle.py  _providers.py  _revocation.py  _signing.py  _snp_verify.py  _tdx_verify.py  _tpm_verify.py  _transparency.py  _types.py  _verify.py  cli.py  models.py
python/tests/: test_agt_evidence.py  test_am_attest.py  test_am_bind.py  test_am_compat.py  test_am_crypto.py  test_am_verify.py  test_attestation_chain.py  test_canonicalize.py  test_cert_chain.py  test_cli.py  test_delegation_hitl.py  test_delegation_public_api.py  test_examples.py  test_hw_providers.py  test_memory_delta.py  test_merkle.py  test_poisoning_scan.py  test_providers.py  test_public_api.py  test_revocation.py  test_signing.py  test_snp_verify.py  test_tdx_verify.py  test_tpm_verify.py  test_transparency.py  test_vectors.py  test_verify.py  test_verify_delegation.py
python/tests/vectors/: AM-VEC-001.json  AM-VEC-002.json  AM-VEC-003.json  AM-VEC-004.json  AM-VEC-005.json  AM-VEC-006.json  AM-VEC-007.json  AM-VEC-008.json  AM-VEC-009.json  AM-VEC-010.json  AM-VEC-011.json  AM-VEC-012.json  AM-VEC-013.json  AM-VEC-014.json  AM-VEC-015.json  AM-VEC-016.json  AM-VEC-017.json  AM-VEC-018.json  AM-VEC-019.json  README.md  generate.py  index.json  keys.json
python/tests/vectors/snp/: README.md
roadmap/: index.html
scripts/: gen_agt_evidence.py
search/: search_index.json
spec/: agent-manifest-spec-v0.1.md
spec-overview/: index.html  index.md
tutorials/: index.html  index.md
tutorials/ci-cd-signing/: index.html
tutorials/cmcp-session-binding/: index.html
tutorials/delegation-chains/: index.html
tutorials/deploy-verifier/: index.html
(+11 files in other folders)
