[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-manifest"
version = "0.1.0a1"
description = "Agent Manifest SDK — hardware-anchor all 10 artifacts defining an agent at deployment"
readme = "../README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Imran Siddique", email = "imran.siddique@opaque.co"}]
dependencies = [
  "pydantic>=2.7,<3",
  "cryptography>=42,<44",
]

[project.optional-dependencies]
pq      = ["pyoqs>=0.10"]
server  = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]
cli     = ["click>=8.1"]
dev     = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "jcs>=0.3",
           "pyoqs>=0.10", "fastapi>=0.111", "uvicorn[standard]>=0.29", "click>=8.1"]

[project.scripts]
manifest = "agent_manifest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_manifest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]