[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-manifest"
version = "0.1.0a1"
description = "Agent Manifest SDK — cryptographically anchor all 10 artifacts defining an AI agent at deployment"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Imran Siddique", email = "imran.siddique@opaque.co"}]
keywords = [
  "ai-agents", "attestation", "governance", "tee", "confidential-computing",
  "mcp", "agent-manifest", "trust", "hardware-attestation", "pydantic",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7,<3",
  "cryptography>=42,<44",
]

[project.optional-dependencies]
pq      = ["pyoqs>=0.10"]
server  = ["fastapi>=0.111", "uvicorn[standard]>=0.29", "httpx>=0.27"]
cli     = ["click>=8.1"]
all     = ["pyoqs>=0.10", "fastapi>=0.111", "uvicorn[standard]>=0.29", "httpx>=0.27", "click>=8.1"]
dev     = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "jcs>=0.2",
           "pyoqs>=0.10", "fastapi>=0.111", "uvicorn[standard]>=0.29", "click>=8.1"]

[project.scripts]
manifest = "agent_manifest.cli:main"

[project.urls]
Homepage      = "https://github.com/agentrust-io/agent-manifest"
Repository    = "https://github.com/agentrust-io/agent-manifest"
Documentation = "https://github.com/agentrust-io/agent-manifest/tree/main/spec"
"Bug Tracker" = "https://github.com/agentrust-io/agent-manifest/issues"
Changelog     = "https://github.com/agentrust-io/agent-manifest/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_manifest"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.version]
path = "src/agent_manifest/__init__.py"
